@@ -1,3 +1,7 @@
+2012-09-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* readdir.awk: Change argument to readdir_do_ftype().
+
 2012-08-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (EXTRA_DIST): Add jarebug.sh.
