@@ -1,3 +1,8 @@
+2012-09-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* readdir.c, readdir.3am: Change argument to readdir_do_ftype()
+	to be a string. Update the doc accordingly.
+
 2012-08-28         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* readdir.c: Have three states, 0, 1, 2 for never, fallback, and
